# lfd3d

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  autobot.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build-container.yaml  compute-tag.yaml  run-tests.yaml
cluster/: README.md  build_push_sif_seuss.bash  launch_seuss.slurm  singleGpu_launch_seuss.slurm
cluster/autobot/: autobot.py  autobot_launch.md
cluster/orchard/: interact_debug.slurm  train_lerobot.slurm
configs/: _logging.yaml  eval.yaml  train.yaml
configs/dataset/: base_dataset.yaml  droid.yaml  droidLerobot.yaml  genGoalGen.yaml  hoi4d.yaml  liberoLerobot.yaml  multi.yaml  rpadFoxglove.yaml  rpadLerobot.yaml  rt1.yaml  synth_block.yaml
configs/inference/: base_inference.yaml  hoi4d_df_cross.yaml  liberoLerobot_articubot.yaml  liberoLerobot_dino_heatmap.yaml  rpadFoxglove_df_cross.yaml  rpadLerobot_dino_heatmap.yaml
configs/model/: articubot.yaml  df_cross.yaml  dino_3dgp.yaml  dino_heatmap.yaml  diptv3_cross.yaml  mimicplay.yaml  pi0goal.yaml  pixelscore.yaml  resnet_3dgp.yaml  vit_3dgp.yaml
configs/training/: base_train.yaml  droid_articubot.yaml  droid_df_cross.yaml  hoi4d_articubot.yaml  hoi4d_df_cross.yaml  hoi4d_diptv3_cross.yaml  liberoLerobot_articubot.yaml  liberoLerobot_dino_3dgp.yaml  liberoLerobot_dino_heatmap.yaml  liberoLerobot_pixelscore.yaml  multi_articubot.yaml  multi_df_cross.yaml  rpadFoxglove_articubot.yaml  rpadFoxglove_df_cross.yaml  rpadFoxglove_pi0goal.yaml  rpadLerobot_articubot.yaml  rpadLerobot_dino_3dgp.yaml  rpadLerobot_dino_heatmap.yaml  rpadLerobot_mimicplay.yaml  rpadLerobot_vit_3dgp.yaml  rt1_df_cross.yaml  synth_block_df_cross.yaml  synth_block_diptv3_cross.yaml
docs/: mkdocs.yml
docs/docs/: index.md
robot_descriptions/mujoco_menagerie/aloha/: aloha.xml
scripts/: analyze_latents.py  eval.py  eval_episode.py  eval_genGoalGen.py  eval_lerobot_episode.py  eval_lerobot_episode_zht.py  latent_analyze_all.sh  ros_node_inference.py  save_latent_plan.py  train.py  upload_wandb.py  verify_gripper_rot.py  viz_goal.py  viz_goal_event.py  viz_robot_pcd.py
scripts/phantom/: README.md  overlay_virtual_robot.py  phantom_utils.py  pyroki_utils.py  run_phantom_lerobot.py
scripts/synth_block_scene/: render_block.py  scene.xml
src/lfd3d/datasets/: __init__.py  base_data.py  feat_server.py  fractal20220817_data_train.txt  genGoalGen_dataset.py  hoi4d.py  human_calibration  multi_dataset.py  rgb_text_feature_gen.py  rgb_text_featurizer.py  rpad_foxglove_dataset.py  rt1.py  rt1_caption_processing.py  rt1_dataset.py  synth_block.py  synth_block_dataset.py
src/lfd3d/datasets/aloha_calibration/: T_world_from_camera_est_left_v4_0627.txt  T_world_from_camera_front_20260121.txt  multiview_calib.json
src/lfd3d/datasets/droid/: chunk_droid_with_gemini.py  droid_dataset.py  droid_test.txt  droid_train.txt  droid_val.txt  missing_names.json  pca_model.pkl  read_svo.py  render_robotiq.py  test.json  train.json  val.json  zed_intrinsics.json
src/lfd3d/datasets/genGoalGen/: README.md  pca_model.pkl  rgb_text_feature_gen.py
src/lfd3d/datasets/hoi4d/: hoi4d_dataset.py  hoi4d_videos.json  pca_model.pkl
src/lfd3d/datasets/hoi4d_processing/: pca_model.pkl  rgb_text_feature_gen.py
src/lfd3d/datasets/lerobot/: annotate_events.py  lerobot_dataset.py
src/lfd3d/datasets/libero_franka_calibration/: agentview_cam_to_world_libero_90_1.txt  agentview_cam_to_world_libero_90_2.txt  agentview_cam_to_world_libero_goal.txt  agentview_cam_to_world_libero_long.txt  agentview_cam_to_world_libero_long_1.txt  agentview_cam_to_world_libero_long_2.txt  agentview_cam_to_world_libero_object.txt  intrinsics-256.txt  intrinsics.txt
src/lfd3d/datasets/rpad_foxglove/: annotate_events.py  render_aloha.py  rpad_foxglove_dataset.py  test.json  train.json  val.json
src/lfd3d/datasets/rpad_foxglove/calibration/: T_world_from_camera_est_right_0320.txt
src/lfd3d/datasets/rpad_foxglove/splits/0320/: train.json
src/lfd3d/datasets/rpad_foxglove/splits/0627/: test.json  train.json
src/lfd3d/datasets/rt1/: fractal20220817_data_val.txt  rgb_text_feature_gen.py  rt1_dataset.py  save_event_rgb.py
src/lfd3d/datasets/rt1_processing/: pca_model.pkl  rgb_text_feature_gen.py  save_event_rgb.py
src/lfd3d/datasets/vlm_classify/: classify_utils.py  eval_after_classify_all.py  vlm_classify_all.py  vlm_classify_eval.py
src/lfd3d/metrics/: pcd_metrics.py
src/lfd3d/models/: articubot.py  base_module.py  dino_3dgp.py  dino_heatmap.py  diptv3.py  mimicplay.py  pixelscore.py  resnet_3dgp.py  tax3d.py  vit_3dgp.py
src/lfd3d/models/PointTransformerV3/: model.py
src/lfd3d/models/PointTransformerV3/serialization/: default.py  hilbert.py  z_order.py
src/lfd3d/models/dit/: models.py  relative_encoding.py
src/lfd3d/models/dit/diffusion/: __init__.py  diffusion_utils.py  gaussian_diffusion.py
src/lfd3d/models/pi0/: paligemma_with_expert.py  pi0.py  pi0_goal.py
src/lfd3d/nets/: dgcnn.py
src/lfd3d/utils/: data_utils.py  gemini_utils.py  lora_utils.py  script_utils.py  show_glb.py  viz_utils.py
