[project]
name = "lfd3d"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [{ email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" }]
dependencies = [
  "diffusers == 0.26.3",
  "gif",
  "typer",
  "huggingface-hub == 0.25.2",
  "open3d",
  "hydra-core == 1.3.2",
  "pytorch_lightning == 2.3.3",
  "omegaconf == 2.3.0",
  "numpy == 1.25",
  "torch == 2.0.1",        # CUDA 11.8
  "torchmetrics",
  "torchvision == 0.15.2", # CUDA 11.8
  "wandb == 0.15.4",
  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs.git",
  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d.git",
  "timm == 0.9.12",
  "tensorflow-cpu == 2.8",
  "tensorflow-datasets",
  "torchdatasets @ git+https://github.com/szymonmaszke/torchdatasets.git",
  "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
  "chumpy @ git+https://github.com/hassony2/chumpy.git",
  "manopth @ git+https://github.com/hassony2/manopth.git",
  "sentencepiece",
  "robot_descriptions",
  "trimesh",
  "spconv-cu118", # CUDA 11.8
  "google-genai",
  "moviepy == 1.0.3",
  "transformers == 4.45.2",
]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pre-commit == 3.3.3",
]
notebooks = ["jupyter"]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lfd3d = ["py.typed"]

[tool.isort]
profile = "black"
known_third_party = "wandb"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["torchvision.*", "diffusers", "pytorch3d.transforms", "timm.*", "open3d", "tqdm.auto", "tensorflow_datasets", "pytorch3d.structures", "torchdatasets", "tqdm", "tensorflow"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"

[tool.pylint]
known-third-party = "wandb"

[tool.pylint.TYPECHECK]
generated-members = 'torch.*'
