[project]
name = "lfd3d"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" }, { email = "sskrishn@andrew.cmu.edu", name = "Sriram Krishna" }]
dependencies = [
    "diffusers==0.26.3",
    "gif",
    "typer",
    "huggingface-hub==0.25.2",
    "open3d",
    "hydra-core==1.3.2",
    "pytorch-lightning==2.3.3",
    "omegaconf==2.3.0",
    "numpy==1.25",
    "torchmetrics",
    "wandb==0.15.4",
    "moviepy==1.0.3",
    "transformers==4.45.2",
    "sentencepiece",
    "robot_descriptions",
    "trimesh",
    "tensorflow-datasets",
    "pip>=25.0.1,<26",
]

[project.optional-dependencies]
develop = [
    "ruff==0.3.6",
    "mypy==1.3.0",
    "pytest==7.3.2",
    "pre-commit==3.3.3",
]
notebooks = ["jupyter"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lfd3d = ["py.typed"]

# Pixi-specific configuration
[tool.pixi.project]
channels = ["pytorch", "nvidia/label/cuda-11.8.0", "conda-forge"]
platforms = ["linux-64"]

# Conda dependencies
[tool.pixi.dependencies]
python = "3.10.*"
cuda-toolkit = "11.8.*"
gcc = "11.*"
gxx = "11.*"


# PyPI-specific dependencies
[tool.pixi.pypi-dependencies]
lfd3d = { path = ".", editable = true }
torch = "==2.0.1"
torchvision = "==0.15.2"
timm = "==0.9.12"
tensorflow-cpu = "==2.8.0"
fvcore = "==0.1.5.post20221221"
iopath = "==0.1.9"
opencv-python = "*"
packaging = "*"
wheel = "*"
ninja = "*"
spconv-cu118 = "*"  # CUDA 11.8
torch_geometric = "*"

# Git dependencies as tasks
[tool.pixi.tasks]
install-rpad-pyg = "pip install git+https://github.com/r-pad/pyg_libs.git"
install-rpad-viz = "pip install git+https://github.com/r-pad/visualize_3d.git"
install-torchdatasets = "pip install git+https://github.com/szymonmaszke/torchdatasets.git"
install-segment-anything = "pip install git+https://github.com/facebookresearch/segment-anything.git"
install-chumpy = "pip install git+https://github.com/hassony2/chumpy.git"
install-manopth = "pip install git+https://github.com/hassony2/manopth.git"
install-pyg = """
pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.0.0+cu118.html
"""
install-pytorch3d = """
pip install --no-index --no-cache-dir pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py310_cu118_pyt201/download.html
"""
setup-pre-commit = "pre-commit install"
install-flash-attn = """
pip install flash-attn==2.7.2.post1 --no-build-isolation
"""
install-deps = { depends-on = ["install-rpad-pyg", "install-rpad-viz", "install-torchdatasets", "install-segment-anything", "install-chumpy", "install-manopth", "install-pyg", "install-pytorch3d", "setup-pre-commit", "install-flash-attn"] }

# Environments
[tool.pixi.environments]
default = { features = ["develop", "notebooks", "docs"], solve-group = "default"}

[tool.ruff]
# Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I')
target-version = "py310"
line-length = 88  # Same as Black
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "PL"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["A", "B", "C", "E", "F", "I", "N", "Q", "W", "UP", "PL"]
unfixable = []

# Exclude certain files/directories from linting
exclude = [
    ".git",
    ".eggs",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["torchvision.*", "diffusers", "pytorch3d.transforms", "timm.*", "open3d", "tqdm.auto", "tensorflow_datasets", "pytorch3d.structures", "torchdatasets", "tqdm", "tensorflow"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
