[project]
name = "lfd3d"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
    { email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" },
    { email = "sskrishn@andrew.cmu.edu", name = "Sriram Krishna" },
]
dependencies = [
    "diffusers>=0.26.3",
    "gif",
    "typer",
    "huggingface-hub>=0.25.2,<=0.32.2",
    "datasets<4.0.0",
    "hydra-core==1.3.2",
    "pytorch-lightning==2.4",
    "omegaconf==2.3.0",
    "numpy>=2.1",
    "torchmetrics",
    "wandb==0.18",
    "moviepy==1.0.3",
    "transformers==4.45.2",
    "sentencepiece",
    "robot_descriptions",
    "trimesh",
    "pip>=25.0.1,<26",
    "zarr>=2.12,<3",
    "lightning-utilities==0.11.7",
    "ipdb>=0.13.13,<0.14",
    "addict==2.4.0",
    "mujoco>=3.2.7,<3.3",
    "tensorflow-datasets>=4.9.8,<5",
    "tensorflow-cpu>=2.19.0,<3",
    "google-genai>=1.11.0,<2",
    "peft>=0.15.2,<0.16",
    "decord>=0.6.0,<0.7",
    "mink>=0.0.11,<0.0.12",
]

[project.optional-dependencies]
develop = [
    "ruff==0.3.6",
    "mypy==1.3.0",
    "pytest==7.3.2",
    "pre-commit==3.3.3",
    "basedpyright",
]
notebooks = ["jupyter"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lfd3d = ["py.typed"]

# Pixi-specific configuration
[tool.pixi.project]
channels = ["pytorch", "nvidia/label/cuda-12.4.0", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }
cuda = "12.4"

# Conda dependencies
[tool.pixi.dependencies]
python = "3.10.*"
cuda-toolkit = "12.4.*"
gcc = "11.*"
gxx = "11.*"
setuptools = "==65.5.0"
protobuf = ">=4.21,<6"
ffmpeg = ">=6,<8"

# PyPI-specific dependencies
[tool.pixi.pypi-dependencies]
lfd3d = { path = ".", editable = true }
torch = { version = "==2.6.0", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = "==0.21.0", index = "https://download.pytorch.org/whl/cu124" }
timm = "==0.9.12"
fvcore = "==0.1.5.post20221221"
iopath = "==0.1.9"
opencv-python = "*"
packaging = "*"
wheel = "*"
ninja = "*"
spconv-cu124 = "*"
torch_geometric = "<2.3"
lerobot = { git = "https://github.com/r-pad/lerobot.git", rev = "bfc33ea1e506006f079f53f6a3b6cb91f4827372" }

# Git dependencies as tasks
[tool.pixi.tasks]
install-pyg = """
pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.6.0+cu124.html
"""
install-pytorch3d = """
pip install git+https://github.com/facebookresearch/pytorch3d.git@stable
"""
install-open3d = "pip install open3d==0.19.0"
install-rpad-libs = "pip install git+https://github.com/r-pad/pyg_libs.git git+https://github.com/r-pad/visualize_3d.git"
install-torchdatasets = "pip install git+https://github.com/sriramsk1999/torchdatasets.git"
install-segment-anything = "pip install git+https://github.com/facebookresearch/segment-anything.git"
install-mano = "pip install git+https://github.com/hassony2/chumpy.git git+https://github.com/hassony2/manopth.git"
install-deps = { depends-on = [
    "install-open3d",
    "install-pyg",
    "install-pytorch3d",
    "install-rpad-libs",
    "install-torchdatasets",
    "install-segment-anything",
    "install-mano",
] }

setup-pre-commit = "pre-commit install"
test-cuda = "python -c 'import torch; print(torch.cuda.is_available())'"

# Environments
[tool.pixi.environments]
default = { features = [
    "develop",
    "notebooks",
    "docs",
], solve-group = "default" }

[tool.ruff]
# Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I')
target-version = "py39"
line-length = 88                                               # Same as Black
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "PL"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["A", "B", "C", "E", "F", "I", "N", "Q", "W", "UP", "PL"]
unfixable = []

# Exclude certain files/directories from linting
exclude = [
    ".git",
    ".eggs",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
include = ["src"]
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.10"
venvPath = ".pixi/envs"
venv = "default"
typeCheckingMode = "basic"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "torchvision.*",
    "diffusers",
    "pytorch3d.transforms",
    "timm.*",
    "open3d",
    "tqdm.auto",
    "tensorflow_datasets",
    "pytorch3d.structures",
    "torchdatasets",
    "tqdm",
    "tensorflow",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
